--- a/iframe-002.html
+++ b/iframe-002.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iframe com minha pagina</title>
+
+    <style>
+        body{
+            background-color: burlywood;
+        }
+
+        iframe{
+            display: block;
+            border: 2px solid black;
+            background-color: white;
+            width: 500px;
+            height: 400px;
+            margin: auto;
+        }
+    </style>
+
 </head>
 <body>
     <h1>Iframe com minha pagina (pagina teste)</h1>
-    <iframe src="tabela-005-006.html" frameborder="0"></iframe>
+    <iframe src="iframe-001.html" frameborder="0"></iframe>
 </body>
 </html>
