--- a/iframe-001.html
+++ b/iframe-001.html
@@ -17,7 +17,7 @@
     <h1>Criando meu iframe</h1>
 
     <p>Irei mostrar aqui o iframe do site do professor guanabara;</p>
-    <iframe src="https://cursoemvideo.com" frameborder="0" scrolling="no"></iframe>
+    <iframe src="https://cursoemvideo.com" frameborder="0" scrolling="auto"></iframe>
     
 </body>
 </html>
