--- a/iframe-003.html
+++ b/iframe-003.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilo/style.css">
     <title>Criando link´s para reproduzir no iframe.</title>
+
 </head>
 <body>
     <h1>Reproduzindo outras paginas no iframe</h1>
@@ -13,16 +15,16 @@
     <ul>
         <li><a href="../tabelas/tabela-005-006.html" target="frame">Primeira pagina</a></li>
 
-        <li><a href="../grounping-teste/index.html" target="frame"></a>Segunda pagina</li>
-        
-        <li><a href="../desafio-014/index.html" target="frame"></a>Terceira pagina</li>
+        <li><a href="../grounping-teste/index.html" target="frame">Segunda pagina</a></li>
+
+        <li><a href="../desafio-014/index.html" target="frame">Terceira pagina</a></li>
     </ul>
 
 
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe dolorem, dolorum at voluptatem repudiandae magnam quas in dolore, pariatur ullam eos totam temporibus unde suscipit voluptas. Eum incidunt maxime dolorem.</p>
     <p>Iure nobis deleniti repellendus dolor repellat similique placeat animi sit quam mollitia aperiam, id nisi, illo quisquam consequuntur facere a nulla error? Soluta vel placeat beatae officia dolore veritatis nesciunt?</p>
 
-    <iframe src=""  name="frame">
+    <iframe src=""  name="frame" scrolling="auto">
         <p>Seu navegador não é compativel</p>
     </iframe>
 </body>
