pagina para carregar um iframe

--- a/pagina-extra/form.html
+++ b/pagina-extra/form.html
@@ -14,6 +14,7 @@
 
         <input id="campo-nome" type="text" placeholder="Digite seu nome aqui">
 
+        <input type="submit" value="Enviar">
     </form>
     
 </body>
