--- a/iframe-004.html
+++ b/iframe-004.html
@@ -10,7 +10,7 @@
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio quasi, autem dolorem tenetur voluptatum officiis asperiores hic laudantium ipsum quam sapiente quae laboriosam aut eum eligendi sit porro ratione illum.</p>
 
-    <iframe src="pagina-extra/form.html" >
+    <iframe src="pagina-extra/form.html" sandbox="sandbox" referrerpolicy="no-referrer" >
         <p>Seu navegador não é compativel com Iframes.</p>
     </iframe>
 
