--- a/pagina-extra/script.html
+++ b/pagina-extra/script.html
@@ -10,9 +10,9 @@
     <div id="saida"></div>
 
     <script>
-        function clicou{
-          s = window.getElementById("saida")
-          s.innerHTML +="<p> Você clicou </p>" 
+        function clicou() {
+          s = window.document.getElementById("saida")
+          s.innerHTML += '<p>Você clicou</p>'
         }
     </script>
 </body>
