--- a/iframe-005.html
+++ b/iframe-005.html
@@ -14,7 +14,9 @@
 <h1>Minha pagina</h1>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid ab magni libero dolorem quasi expedita obcaecati, hic iure suscipit officiis incidunt iusto ipsa sed id culpa dolor quam cupiditate! Recusandae!</p>
 
-<iframe src="pagina-extra/script.html"></iframe>
+<iframe src="pagina-extra/script.html" sandbox="allow-scripts" referrerpolicy="no-referrer">
+    <p>Seu navegador não é compativel com iframe</p>
+</iframe>
 <p>Recusandae unde quaerat corporis adipisci aliquid ea? Animi laborum numquam voluptatum vitae dicta porro ratione praesentium veritatis assumenda. Cupiditate cum adipisci repellendus corrupti aliquam, odit vel sit ex esse alias.</p>
 
     
